remove extraneous tickmark

--- a/www/trackseeker/index.html
+++ b/www/trackseeker/index.html
@@ -88,7 +88,7 @@
 
 <p>I want to extract the hidden track from Beach House&rsquo;s &ldquo;Irene.&rdquo; The song is currently 16 minutes long, with about seven minutes of silence between the album closer and the hidden track. I run the command:</p>
 
-<p><code>trackseeker --artist=&quot;Beach House&quot; --album=&quot;Bloom&quot; --track=&quot;Irene&quot; --num=&quot;10&quot; --fmt=&quot;m4a&quot;</code>`</p>
+<p><code>trackseeker --artist=&quot;Beach House&quot; --album=&quot;Bloom&quot; --track=&quot;Irene&quot; --num=&quot;10&quot; --fmt=&quot;m4a&quot;</code></p>
 
 <p>After a few minutes, two new songs are added to my iTunes library, the shortened version of &ldquo;Irene&rdquo; and the hidden track titled &ldquo;(Hidden Track)&rdquo;. In this case, Trackseeker removed seven minutes of silence and saved 14 MB of space. Not bad!</p>
 
